--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+                <a class="navbar-brand" href="index.html"><img src="assets/logo-hurricane.svg"><a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -46,9 +46,9 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5">
-                        <div class="card h-100">
+                <div class="custom-cards-container row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center ">
+                    <div class="custom-card-container col mb-5">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/vSRf3vY.jpg" alt="" />
                             <!-- Product details-->
@@ -64,11 +64,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Best day</div>
-                            <!-- Product image-->
+                    <div class="custom-card-containercol mb-5">
+                        <div class="custom-card-container card h-100">
+                            <div class=" badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Best day</div>
+                            <!--  image-->
                             <img class="card-img-top" src="https://imgur.com/RNvKYmG.png" alt="joueur de paintball" />
                             <!-- Product details-->
                             <div class="card-body p-4">
@@ -91,9 +90,9 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Renouveaux</div>
+                            <div class=" badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Renouveaux</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/wHBMB8g.jpg" alt="en squad" />
                             <!-- Product details-->
@@ -111,8 +110,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
+                    <div class=" col mb-5">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/dFm1sYv.jpg" alt="Speed" />
                             <!-- Product details-->
@@ -136,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Sale badge-->
                                 <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">aïe</div>
                             <!-- Product image-->
@@ -155,7 +154,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/s2OCttv.jpg" alt="moi visant " />
                             <!-- Product details-->
@@ -173,7 +172,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-whit position-absolute" style="top: 0.5rem; right: 0.5rem">team</div>
                             <!-- Product image-->
@@ -206,7 +205,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/wtVCkOJ.jpg" alt="trio alm" />
                             <!-- Product details-->
@@ -242,6 +241,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="./js/scripts.js"></script>
     </body>
 </html>
