--- a/pages/equipe.html
+++ b/pages/equipe.html
@@ -39,9 +39,9 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <div class="custom-cards-container row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/gwDAmsO.jpg" alt="Lanceur arnaud 1" />
                             <!-- Product details-->
@@ -60,7 +60,7 @@
                     </div>
                     
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/0LmF36g.jpg" alt="xsl" />
                             <!-- Product details-->
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/fwuNRep.jpg" alt="RSX" />
                             <!-- Product details-->
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/95BTaHP.jpg" alt="fave to face" />
                             <!-- Product details-->
@@ -116,7 +116,7 @@
                     </div>
                     
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/i0hO31F.jpg" alt="teams" />
                             <!-- Product details-->
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/FCPw4IL.jpg" alt="trio alm" />
                             <!-- Product details-->
@@ -162,6 +162,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
     </body>
 </html>
