--- a/pages/lanceur.html
+++ b/pages/lanceur.html
@@ -30,10 +30,10 @@
     </nav>
         <!-- Section-->
         <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
+            <div class="custom-cards-container container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/gwDAmsO.jpg" alt="Lanceur arnaud 1" />
                             <!-- Product details-->
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/vVVBcNc.png" alt="joueur de paintball" />
                             <!-- Product details-->
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/0LmF36g.jpg" alt="xsl" />
                             <!-- Product details-->
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/fwuNRep.jpg" alt="RSX" />
                             <!-- Product details-->
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Sale badge-->
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/95BTaHP.jpg" alt="fave to face" />
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <img class="card-img-top" src="https://imgur.com/uGPLSXI.jpg" alt="SMART lanceur " />
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/i0hO31F.jpg" alt="teams" />
                             <!-- Product details-->
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="card h-100">
+                        <div class="custom-card-container card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://imgur.com/FCPw4IL.jpg" alt="trio alm" />
                             <!-- Product details-->
@@ -188,6 +188,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
     </body>
 </html>
