--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <link href="style/styles.css" rel="stylesheet"/>
 
     </head>
+    
     <body>
+        <div id="visitorCounter">Visiteurs : <span id="visitorCount">183</span></div>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
@@ -50,7 +52,7 @@
                     <div class="custom-card-container col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/vSRf3vY.jpg" alt="" />
+                            <img class="card-img-top" src="assets/Sortie1.jpg" alt="" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -68,7 +70,7 @@
                         <div class="custom-card-container card h-100">
                             <div class=" badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Best day</div>
                             <!--  image-->
-                            <img class="card-img-top" src="https://imgur.com/RNvKYmG.png" alt="joueur de paintball" />
+                            <img class="card-img-top" src="assets/Day 2.jpg" alt="joueur de paintball" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -94,7 +96,7 @@
                             <!-- Sale badge-->
                             <div class=" badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Renouveaux</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/wHBMB8g.jpg" alt="en squad" />
+                            <img class="card-img-top" src="assets/squad.jpg" alt="en squad" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -113,7 +115,7 @@
                     <div class=" col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/dFm1sYv.jpg" alt="Speed" />
+                            <img class="card-img-top" src="assets/SPEED.jpg" alt="Speed" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -139,7 +141,7 @@
                             <!-- Sale badge-->
                                 <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">aïe</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/jsio9ZC.jpg" alt="fave to face" />
+                            <img class="card-img-top" src="assets/marque 1.jpg" alt="fave to face" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -156,7 +158,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/s2OCttv.jpg" alt="moi visant " />
+                            <img class="card-img-top" src="assets/vise.jpg" alt="moi visant " />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -176,7 +178,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-whit position-absolute" style="top: 0.5rem; right: 0.5rem">team</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/Mn00fLH.jpg" alt="teams" />
+                            <img class="card-img-top" src="assets/team.jpg" alt="teams" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -207,7 +209,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/wtVCkOJ.jpg" alt="trio alm" />
+                            <img class="card-img-top" src="assets/trio.jpg" alt="trio alm" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
