image refait avec js

--- a/pages/equipe.html
+++ b/pages/equipe.html
@@ -18,7 +18,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/logo-hurricane.svg"><a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -43,7 +43,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/gwDAmsO.jpg" alt="Lanceur arnaud 1" />
+                            <img class="card-img-top" src="../assets/arnaud.jpg" alt="Lanceur arnaud 1" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -62,7 +62,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/0LmF36g.jpg" alt="xsl" />
+                            <img class="card-img-top" src="../assets/thierry arme.jpg" alt="xsl" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -80,7 +80,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/fwuNRep.jpg" alt="RSX" />
+                            <img class="card-img-top" src="../assets/franck.jpg" alt="RSX" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -99,7 +99,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/95BTaHP.jpg" alt="fave to face" />
+                            <img class="card-img-top" src="../assets/gregory.jpg" alt="fave to face" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -118,7 +118,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/i0hO31F.jpg" alt="teams" />
+                            <img class="card-img-top" src="../assets/Ryan.jpg" alt="teams" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -136,7 +136,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/FCPw4IL.jpg" alt="trio alm" />
+                            <img class="card-img-top" src="../assets/flo.jpg" alt="trio alm" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
