--- a/pages/equipement.html
+++ b/pages/equipement.html
@@ -10,7 +10,7 @@
             <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-hurricane.svg"><a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -33,7 +33,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/fwuNRep.jpg" alt="Lanceur" />
+                            <img class="card-img-top" src="../assets/franck.jpg" alt="Lanceur" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -53,7 +53,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/DbVDmfg.png" alt="Billes" />
+                            <img class="card-img-top" src="../assets/bille.jpg" alt="Billes" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -74,7 +74,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/EyG86gS.jpg" alt="Protection" />
+                            <img class="card-img-top" src="../assets/protection.jpg" alt="Protection" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -94,7 +94,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/zPtbQGz.jpg" alt="tenue" />
+                            <img class="card-img-top" src="../assets/tenu.jpg" alt="tenue" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -112,7 +112,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/qgHGtLN.jpg" alt="Entretien et Nettoyage" />
+                            <img class="card-img-top" src="../assets/nettoyage.jpg" alt="Entretien et Nettoyage" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -130,7 +130,7 @@
 
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
-                            <img class="card-img-top" src="https://imgur.com/yPeNHSD.jpg" alt="fumi et petard" />
+                            <img class="card-img-top" src="../assets/action.jpg" alt="fumi et petard" />
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <h5 class="fw-bolder">Autour du terrain</h5>
