--- a/pages/lanceur.html
+++ b/pages/lanceur.html
@@ -12,7 +12,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/logo-hurricane.svg"><a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -35,7 +35,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/gwDAmsO.jpg" alt="Lanceur arnaud 1" />
+                            <img class="card-img-top" src="../assets/arnaud.jpg" alt="Lanceur arnaud 1" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -53,7 +53,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/vVVBcNc.png" alt="joueur de paintball" />
+                            <img class="card-img-top" src="../assets/arnaud2.jpg" alt="Arnaud 2" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -75,7 +75,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/0LmF36g.jpg" alt="xsl" />
+                            <img class="card-img-top" src="../assets/thierry arme.jpg" alt="xsl" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -93,7 +93,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/fwuNRep.jpg" alt="RSX" />
+                            <img class="card-img-top" src="../assets/franck.jpg" alt="RSX" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -113,7 +113,7 @@
                         <div class="custom-card-container card h-100">
                             <!-- Sale badge-->
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/95BTaHP.jpg" alt="fave to face" />
+                            <img class="card-img-top" src="../assets/gregory.jpg" alt="AMP" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
-                            <img class="card-img-top" src="https://imgur.com/uGPLSXI.jpg" alt="SMART lanceur " />
+                            <img class="card-img-top" src="../assets/franck 2.jpg" alt="SMART lanceur " />
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <h5 class="fw-bolder">Franck nº2</h5>
@@ -145,7 +145,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/i0hO31F.jpg" alt="teams" />
+                            <img class="card-img-top" src="../assets/Ryan.jpg" alt="RSX" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -163,7 +163,7 @@
                     <div class="col mb-5">
                         <div class="custom-card-container card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://imgur.com/FCPw4IL.jpg" alt="trio alm" />
+                            <img class="card-img-top" src="../assets/flo.jpg" alt="flo lanceur" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
