--- a/pages/cv.html
+++ b/pages/cv.html
@@ -11,7 +11,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/logo-hurricane.svg"><a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://imgur.com/6GKW28E.png" alt="Ryan Almansa" class="profile-pic">
+            <img src="../assets/moi cv.jpg" alt="Ryan Almansa" class="profile-pic">
             <h1>Ryan Almansa</h1>
             <p>18 years old | BTS CIEL (Cybersecurity, IT and Software Environment)</p>
         </div>
