--- a/pages/parck.html
+++ b/pages/parck.html
@@ -12,7 +12,7 @@
  <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html"><img src="https://imgur.com/CYgKVa2.jpg"><a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/logo-hurricane.svg"><a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -32,12 +32,12 @@
         <div class="banner">
             <div class="banner-content">
                 <a href="https://www.gopark.fr/fr/paintball-exterieur-paris" class="banner-link">
-                    <img src="https://imgur.com/fz9qmiD.jpg"> 
-                   <img src="https://imgur.com/vdTqs3k.jpg">
-                   <img src="https://imgur.com/4ecNwdx.jpg">
-                   <img src="https://imgur.com/tsRqrRD.jpg"> 
-                   <img src="https://imgur.com/T4h0KvT.jpg">
-                   <img src="https://imgur.com/YgT29qz.jpg">
+                    <img src="../assets/parck 1.jpg"> 
+                    <img src="../assets/parck2.jpg">
+                    <img src="../assets/Parck3.jpg">
+                    <img src="../assets/Parck4.jpg"> 
+                    <img src="../assets/Parck5.jpg">
+                    <img src="../assets/Parck6.jpg">
                    <p>Pas d'inquiétude, les images seront bientôt de retour  après ce passage !</p>
                 </a>
             </div>
