rajoue de page et up

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="style/styles.css" rel="stylesheet"/>
 
+
     </head>
     
     <body>
@@ -24,27 +25,19 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/lanceur.html">Lanceur</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipement.html">Equipement</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipe.html">Equipe</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/plus.html">Plus</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/parck.html">Parc</a></li>          
-                       </ul>                    
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/MotoGP™.html">MotoGP™ <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
+                    </ul>                    
                 </div>
             </div>
         </nav>
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Un univers parallèle </h1>
-                    <p class="lead fw-normal text-white-50 mb-0">De la crainte à la distraction</p>
-                </div>
-            </div>
-        </header>
+
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
