--- a/pages/parck.html
+++ b/pages/parck.html
@@ -20,7 +20,7 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="cv.html">CV <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="MotoGP™.html">MotoGP™ <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
