--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/lanceur.html">Lanceur</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipement.html">Equipement</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/equipe.html">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/MotoGP™.html">MotoGP™ <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/plus.html">Plus</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pages/parck.html">Parc</a></li>            
                     </ul>                    
                 </div>
             </div>
