--- a/pages/MotoGP™.html
+++ b/pages/MotoGP™.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MotoGP™</title>
-    <link href="../style/styles.css" rel="stylesheet" />
-    <script src="./js/scripts.js"></script>
+    <title>Accueil Moto GP</title>
+    <link rel="stylesheet" href="../style/GP.css">
+    <script defer src="../js/motogp.js"></script>
 </head>
-
-<!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="../index.html"><img src="../assets/logo-hurricane.svg"><a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="MotoGP™.html">MotoGP™ <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="cvEn.html">CV <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
-            </ul>                    
-        </div>
-    </div>
-</nav>
-
 <body>
+    <!-- Barre de navigation avec motos animées -->
+    <nav class="navbar">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+            <li class="nav-item" data-moto="moto1"><a class="nav-link active" aria-current="page" href="../index.html">Accueil</a></li>
+            <li class="nav-item" data-moto="moto2"><a class="nav-link active" aria-current="page" href="lanceur.html">Lanceur</a></li>
+            <li class="nav-item" data-moto="moto3"><a class="nav-link active" aria-current="page" href="equipement.html">Equipement</a></li>
+            <li class="nav-item" data-moto="moto4"><a class="nav-link active" aria-current="page" href="equipe.html">Equipe</a></li>
+            <li class="nav-item" data-moto="moto5"><a class="nav-link active" aria-current="page" href="MotoGP™.html">MotoGP™ <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/255px-Flag_of_France.svg.png" alt="Français" width="25"></a></li>
+            <li class="nav-item" data-moto="moto6"><a class="nav-link active" aria-current="page" href="#"># <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="English" width="30"></a></li>
+            <li class="nav-item" data-moto="moto7"><a class="nav-link active" aria-current="page" href="plus.html">Plus</a></li>
+            <li class="nav-item" data-moto="moto8"><a class="nav-link active" aria-current="page" href="parck.html">Parc</a></li>            
+        </ul>
+    </nav>
+    <!-- Section Hero -->
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Bienvenue dans le monde du Moto GP</h1>
+            <p>Découvrez l'univers palpitant des courses de moto</p>
+            <a href="#about" class="btn">En savoir plus</a>
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
     
+
+    <!-- Pied de page -->
+    <footer>
+        <p>&copy; 2024 Tous droits réservés. Passion Moto GP. Ryan Almansa</p>
+    </footer>
 </body>
 </html>
